common/options: make "blue{fs,store}_allocator" LEVEL_DEV

See-also: http://tracker.ceph.com/issues/20660
Signed-off-by: Kefu Chai <kchai@redhat.com>